# ros_ws

./: .gitignore  .gitmodules  .~lock.agcam_cameras_12_10s_2023-05-30_13-44-04.xlsx#  CMakeLists.txt  README.md  agcam_cameras_12_10s_2023-05-30_13-44-04.xlsx  agcam_data2.xlsx  data.xlsx  data2.xlsx
.catkin_tools/profiles/default/: devel_collisions.txt
bashfiles/: Ros.desktop  _main_py  abash.sh  backend.py  calc_gui_half_py  cam1_2023-03-02-04-06-13.bag  cam1_2023-03-02-04-54-36.bag  cam1_marker.csv  complexExample.py  main.desktop  my_GUI.py  my_GUI_working.py  new__test.py  newtemp.py  plotting.py  run.py  run_GUI.py  runfile.py  temp.py  temp_try.py  test2.py  test_launch.py  test_launch_py  testing.py  testingCode.py
bashfiles/backup/: creating_desktop_shortcuts.txt
bashfiles/flask_/: credentials.txt  myapp.py  page.html  script.js  style.css
bashfiles/flask_/templates/: save_credentials.html
devel/: .catkin  _setup_util.py  env.sh  local_setup.bash  local_setup.sh  local_setup.zsh  setup.bash  setup.sh  setup.zsh
disp_live/: GUI.desktop  env_remote.sh
src/: camera_calibration.sh  main_script.sh
src/camera_ros/: package.xml
src/cpp_ex/: CMakeLists.txt
src/cpp_ex/src/: publisher_cpp.cpp  subscriber_cpp.cpp
src/disp_3d/: CMakeLists.txt
src/disp_pkg/: CMakeLists.txt  package.xml
src/dslr_cam/: package.xml
src/fast_cam/: CMakeLists.txt  package.xml
src/fcam/: package.xml
src/my_aruco/: package.xml
src/mycam/: package.xml
src/sync/: CMakeLists.txt  package.xml
src/tesol/: CMakeLists.txt  package.xml
src/test_pkg/: package.xml
(+407 files in other folders)
